--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,5 +10,575 @@
 </head>
 <body>
 
+
+<h1 class="title">h1 Title</h1>
+<h2 class="title">h2 Title</h2>
+<h3 class="title">h3 Title</h3>
+<h4 class="title">h4 Title</h4>
+<h5 class="title">h5 Title</h5>
+<h6 class="title">h6 Title</h6>
+
+
+<h4 class="title">タイトル カラー</h4>
+<h1 class="title">h1 Title</h1>
+<h1 class="title primary">h1 Title</h1>
+<h1 class="title green">h1 Title</h1>
+<h1 class="title blue">h1 Title</h1>
+<h1 class="title orange">h1 Title</h1>
+<h1 class="title red">h1 Title</h1>
+
+<h4 class="title">タイトル サイズ</h4>
+<h1 class="title mini">h1 Title</h1>
+<h1 class="title small">h1 Title</h1>
+<h1 class="title">h1 Title</h1>
+<h1 class="title large">h1 Title</h1>
+<h1 class="title big">h1 Title</h1>
+
+<h2 class="title mini">h2 Title</h2>
+<h2 class="title small">h2 Title</h2>
+<h2 class="title">h2 Title</h2>
+<h2 class="title large">h2 Title</h2>
+<h2 class="title big">h2 Title</h2>
+
+<h3 class="title mini">h3 Title</h3>
+<h3 class="title small">h3 Title</h3>
+<h3 class="title">h3 Title</h3>
+<h3 class="title large">h3 Title</h3>
+<h3 class="title big">h3 Title</h3>
+
+<h4 class="title mini">h4 Title</h4>
+<h4 class="title small">h4 Title</h4>
+<h4 class="title">h4 Title</h4>
+<h4 class="title large">h4 Title</h4>
+<h4 class="title big">h4 Title</h4>
+
+<h5 class="title mini">h5 Title</h5>
+<h5 class="title small">h5 Title</h5>
+<h5 class="title">h5 Title</h5>
+<h5 class="title large">h5 Title</h5>
+<h5 class="title big">h5 Title</h5>
+
+<h6 class="title mini">h6 Title</h6>
+<h6 class="title small">h6 Title</h6>
+<h6 class="title">h6 Title</h6>
+<h6 class="title large">h6 Title</h6>
+<h6 class="title big">h6 Title</h6>
+
+<h4 class="title">タイトル 下線ボーダー</h4>
+
+
+<h3 class="title">wrap要素</h3>
+<p class="thumbnail"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<p class="thumbnail round"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<p class="thumbnail circle"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<p class="thumbnail border"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<p class="thumbnail frame"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<h3 class="title">img要素</h3>
+<img class="thumbnail" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail round" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail circle" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail border" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail frame" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+
+<h3 class="title">カラー</h3>
+
+<p class="thumbnail small border"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border primary"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border green"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border blue"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border orange"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small border red"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<img class="thumbnail small border" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border primary" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border green" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border blue" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border orange" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small border red" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<!--<img class="thumbnail free" src="./image/thumbnail_01.jpg" width="45" alt="person"/>-->
+
+<br/><br/>
+
+<p class="thumbnail small frame"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame primary"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame green"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame blue"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame orange"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail small frame red"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+
+<img class="thumbnail small frame" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame primary" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame green" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame blue" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame orange" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail small frame red" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<!--<img class="thumbnail free" src="./image/thumbnail_01.jpg" width="45" alt="person"/>-->
+
+<h3 class="title">サイズ</h3>
+<p class="thumbnail mini"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<br/><br/>
+
+<h4 class="title">サイズ round</h4>
+
+<p class="thumbnail mini round"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small round"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail round"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large round"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big round"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free round"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini round" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small round" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail round" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large round" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big round" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<h4 class="title">サイズ circle</h4>
+
+<p class="thumbnail mini circle"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small circle"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail circle"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large circle"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big circle"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free circle"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini circle" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small circle" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail circle" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large circle" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big circle" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free circle" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<br/><br/>
+
+<h4 class="title">サイズ border</h4>
+
+<p class="thumbnail mini border"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small border"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail border"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large border"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big border"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free circle"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini border" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small border" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail border" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large border" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big border" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free circle" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<br/><br/>
+
+<h4 class="title">サイズ frame</h4>
+
+<p class="thumbnail mini frame"><img src="./image/thumbnail_01.jpg" width="30" alt="person"/></p>
+<p class="thumbnail small frame"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
+<p class="thumbnail frame"><img src="./image/thumbnail_01.jpg" width="60" alt="person"/></p>
+<p class="thumbnail large frame"><img src="./image/thumbnail_01.jpg" width="90" alt="person"/></p>
+<p class="thumbnail big frame"><img src="./image/thumbnail_01.jpg" width="120" alt="person"/></p>
+<!--<p class="thumbnail free circle"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<img class="thumbnail mini frame" src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+<img class="thumbnail small frame" src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+<img class="thumbnail frame" src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+<img class="thumbnail large frame" src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+<img class="thumbnail big frame" src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+<!--<img class="thumbnail free circle" src="./image/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<h4 class="title">サイズ Caption</h4>
+
+<p class="thumbnail mini caption">
+  <img src="./image/thumbnail_01.jpg" width="30" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail small caption">
+  <img src="./image/thumbnail_01.jpg" width="45" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail caption">
+  <img src="./image/thumbnail_01.jpg" width="60" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail large caption">
+  <img src="./image/thumbnail_01.jpg" width="90" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail big caption">
+  <img src="./image/thumbnail_01.jpg" width="120" alt="person"/>
+  <span class="title">title</span>
+</p>
+<!--<p class="thumbnail free circle"><img src="./image/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
+<h4>テーブル default</h4>
+<table class="table">
+  <caption>Table caption</caption>
+  <thead>
+  <tr>
+    <th>Table Heading</th>
+    <th>Table Heading</th>
+    <th>Table Heading</th>
+  </tr>
+  </thead>
+  <tfoot>
+  <tr>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+  </tr>
+  </tfoot>
+  <tbody>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  </tbody>
+</table>
+
+<h4>テーブル striped</h4>
+
+<table class="table striped">
+  <caption>Table caption</caption>
+  <thead>
+  <tr>
+    <th>Table Heading</th>
+    <th>Table Heading</th>
+    <th>Table Heading</th>
+  </tr>
+  </thead>
+  <tfoot>
+  <tr>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+  </tr>
+  </tfoot>
+  <tbody>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  </tbody>
+</table>
+
+<h4>テーブル color</h4>
+<table class="table primary">
+  <caption>Table caption</caption>
+  <thead>
+  <tr>
+    <th>Table Heading</th>
+    <th>Table Heading</th>
+    <th>Table Heading</th>
+  </tr>
+  </thead>
+  <tfoot>
+  <tr>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+  </tr>
+  </tfoot>
+  <tbody>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  </tbody>
+</table>
+
+<h4>テーブル border</h4>
+
+<table class="table bordered">
+  <caption>Table caption</caption>
+  <thead>
+  <tr>
+    <th>Table Heading</th>
+    <th>Table Heading</th>
+    <th>Table Heading</th>
+  </tr>
+  </thead>
+  <tfoot>
+  <tr>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+    <td>Table Footer</td>
+  </tr>
+  </tfoot>
+  <tbody>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  <tr>
+    <td>Table Data</td>
+    <td>Table Data</td>
+    <td>Table Data</td>
+  </tr>
+  </tbody>
+</table>
+
+<p class="input"><input type="text" value="テキスト"></p>
+<p class="input"><input type="checkbox"></p>
+
+<p class="text">search</p>
+<p class="input"><input type="search"></p>
+
+<p class="input"><input type="radio"></p>
+<p class="input"><input type="radio" checked></p>
+<p class="input"><input type="radio" disabled checked></p>
+
+<h3 class="title">ラジオボタン</h3>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<h3 class="title">チェックボックス</h3>
+
+<input type="checkbox">
+<input type="checkbox" checked>
+<input type="checkbox" disabled checked>
+
+<h4 class="title">チェックボックス カラー</h4>
+<input type="checkbox">
+<input type="checkbox" checked>
+<input type="checkbox" disabled checked>
+
+<input class="primary" type="checkbox">
+<input class="primary" type="checkbox" checked>
+<input class="primary" type="checkbox" disabled checked>
+
+<input class="blue" type="checkbox">
+<input class="blue" type="checkbox" checked>
+<input class="blue" type="checkbox" disabled checked>
+
+<input class="green" type="checkbox">
+<input class="green" type="checkbox" checked>
+<input class="green" type="checkbox" disabled checked>
+
+<input class="orange" type="checkbox">
+<input class="orange" type="checkbox" checked>
+<input class="orange" type="checkbox" disabled checked>
+
+<input class="red" type="checkbox">
+<input class="red" type="checkbox" checked>
+<input class="red" type="checkbox" disabled checked>
+<br/>
+<br/>
+
+<h4 class="title">チェックボックス サイズ</h4>
+
+<input class="mini" type="checkbox">
+<input class="small" type="checkbox">
+<input type="checkbox">
+<input class="large" type="checkbox">
+<input class="big" type="checkbox">
+
+<br/>
+<br/>
+
+<p class="input mini"><input type="checkbox"></p>
+<p class="input small"><input type="checkbox"></p>
+<p class="input"><input type="checkbox"></p>
+<p class="input large"><input type="checkbox"></p>
+<p class="input big"><input type="checkbox"></p>
+
+<input type="text" value="テキスト"/>
+<input type="checkbox"/>
+<input type="search"/>
+<input type="radio"/>
+
+<h3 class="title">セレクト</h3>
+
+<p class="input">
+  <select name="" id="">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<h3 class="title">テキストエリア</h3>
+
+<p class="text">サイズ</p>
+
+<br><br>
+
+<textarea name="" class="narrow"></textarea>
+
+<br><br>
+
+<textarea name="" class="short"></textarea>
+
+<br><br>
+
+<textarea name=""></textarea>
+
+<br><br>
+
+<textarea name="" class="long"></textarea>
+
+<br><br>
+
+<textarea name="" class="wide"></textarea>
+
+<br><br>
+
+<textarea name="" class="free"></textarea>
+
+<p class="text">高さ</p>
+
+<textarea name="" class="lower"></textarea>
+
+<br><br>
+
+<textarea name="" class="low"></textarea>
+
+<br><br>
+
+<textarea name=""></textarea>
+
+<br><br>
+
+<textarea name="" class="high"></textarea>
+
+<br><br>
+
+<textarea name="" class="lofty"></textarea>
+
+
+<p class="text">高さ x 幅</p>
+
+<textarea name="" class="mini"></textarea>
+
+<br><br>
+
+<textarea name="" class="small"></textarea>
+
+<br><br>
+
+<textarea name=""></textarea>
+
+<br><br>
+
+<textarea name="" class="large"></textarea>
+
+<br><br>
+
+<textarea name="" class="big"></textarea>
+
+<p class="text">リサイズ</p>
+
+
+<textarea name="" class="resize"></textarea>
+
+<p class="text">カラー</p>
+
+<textarea name=""></textarea>
+
+<br><br>
+
+<textarea name="" class="primary"></textarea>
+
+<br><br>
+
+<textarea name="" class="green"></textarea>
+
+<br><br>
+
+<textarea name="" class="blue"></textarea>
+
+<br><br>
+
+<textarea name="" class="orange"></textarea>
+
+<br><br>
+
+<textarea name="" class="red"></textarea>
+
+<br><br>
+
+<footer class="footer">
+  <div class="wrap">
+    <p class="text copy">&copy; Atomic Package</p>
+  </div>
+</footer>
+
+
 </body>
 </html>
