--- a/src/html/index.html
+++ b/src/html/index.html
@@ -390,21 +390,53 @@
 <input type="radio" checked>
 <input type="radio" disabled checked>
 
-<input type="radio">
-<input type="radio" checked>
+
+<br>
+<br>
+
+### Radio Color Variation
+
+<br>
+<br>
+
+<input type="radio" name="radio1">
+<input type="radio" name="radio1" checked>
 <input type="radio" disabled checked>
 
-<input type="radio">
-<input type="radio" checked>
-<input type="radio" disabled checked>
+<input type="radio" class="primary" name="radio2">
+<input type="radio" class="primary" name="radio2" checked>
+<input type="radio" class="primary" disabled checked>
 
-<input type="radio">
-<input type="radio" checked>
-<input type="radio" disabled checked>
+<input type="radio" class="blue" name="radio3">
+<input type="radio" class="blue" name="radio3" checked>
+<input type="radio" class="blue" disabled checked>
 
-<input type="radio">
-<input type="radio" checked>
-<input type="radio" disabled checked>
+<input type="radio" class="green" name="radio4">
+<input type="radio" class="green" name="radio4" checked>
+<input type="radio" class="green" disabled checked>
+
+<input type="radio" class="orange" name="radio5">
+<input type="radio" class="orange" name="radio5" checked>
+<input type="radio" class="orange" disabled checked>
+
+<input type="radio" class="red" name="radio6">
+<input type="radio" class="red" name="radio6" checked>
+<input type="radio" class="red" disabled checked>
+
+<br>
+<br>
+
+
+### Radio Size Variation
+
+<br>
+<br>
+
+<input type="radio" name="radio-size" class="primary mini">
+<input type="radio" name="radio-size" class="primary small">
+<input type="radio" name="radio-size" class="primary" checked>
+<input type="radio" name="radio-size" class="primary large">
+<input type="radio" name="radio-size" class="primary big">
 
 <h3 class="title">チェックボックス</h3>
 
@@ -464,7 +496,214 @@
 <h3 class="title">セレクト</h3>
 
 <p class="input">
-  <select name="" id="">
+  <select name="">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="narrow">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="short">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="long">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="wide">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="text">高さ</p>
+
+<p class="input">
+  <select name="" class="lower">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="low">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="high">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="lofty">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="text">高さ x 幅</p>
+
+<p class="input">
+  <select name="" class="mini">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="small">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="large">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="big">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="text">カラー</p>
+
+
+<p class="input">
+  <select name="" class="primary">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="green">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="blue">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="orange">
+    <option value="">1</option>
+    <option value="">2</option>
+    <option value="">3</option>
+    <option value="">4</option>
+    <option value="">5</option>
+  </select>
+</p>
+
+<p class="input">
+  <select name="" class="red">
     <option value="">1</option>
     <option value="">2</option>
     <option value="">3</option>
