add footer style

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -67,6 +67,58 @@
 <h4 class="title">タイトル 下線ボーダー</h4>
 
 
+## Alert
+
+<p class="alert">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+<p class="alert green">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+<p class="alert yellow">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+<p class="alert red">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+
+
+<div class="alert">
+  <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+</div>
+
+<div class="alert green">
+  <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+</div>
+
+<div class="alert yellow">
+  <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+</div>
+
+<div class="alert red">
+  <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+</div>
+
+
+<p class="text">close btn</p>
+
+<div class="alert">
+  <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+  <p class="btn close"></p>
+</div>
+
+<div class="alert green">
+  <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+  <p class="btn close"></p>
+</div>
+
+<div class="alert yellow">
+  <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+  <p class="btn close"></p>
+</div>
+
+<div class="alert red">
+  <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+  <p class="btn close"></p>
+</div>
+
+
+
+
+
+
 <h3 class="title">wrap要素</h3>
 <p class="thumbnail"><img src="./image/thumbnail_01.jpg" width="45" alt="person"/></p>
 
@@ -812,12 +864,106 @@
 
 <br><br>
 
+<footer class="footer center">
+  <div class="wrap">
+    <p class="title footer">Atomic Package</p>
+    <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer center">
+  <div class="wrap">
+    <ul class="menuList align">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+</footer>
+
+<br><br>
+
+<ul class="textList align">
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
+
 <footer class="footer">
   <div class="wrap">
+
+    <div class="box menuList">
+      <dl class="menuList">
+        <dt>PRODUCT</dt>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+      </dl>
+
+      <dl class="menuList">
+        <dt>PRODUCT</dt>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+      </dl>
+
+      <dl class="menuList">
+        <dt>PRODUCT</dt>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+      </dl>
+
+      <dl class="menuList">
+        <dt>PRODUCT</dt>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+        <dd>Tour</dd>
+      </dl>
+    </div>
+
+  </div>
+</footer>
+
+<br><br>
+
+
+<footer class="footer center">
+  <div class="wrap">
+    <p class="title footer">Atomic Package</p>
     <p class="text copy">&copy; Atomic Package</p>
   </div>
 </footer>
 
+<footer class="footer center">
+  <div class="wrap">
+    <p class="title footer">Atomic Package</p>
+    <p class="text copy">&copy; Atomic Package</p>
+  </div>
+</footer>
 
+<footer class="footer center">
+  <div class="wrap">
+    <p class="title footer">Atomic Package</p>
+    <p class="text copy">&copy; Atomic Package</p>
+  </div>
+</footer>
+
+<footer class="footer center">
+  <div class="wrap">
+    <p class="title footer">Atomic Package</p>
+    <p class="text copy">&copy; Atomic Package</p>
+  </div>
+</footer>
 </body>
 </html>
