refactor footer style

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -67,6 +67,79 @@
 <h4 class="title">タイトル 下線ボーダー</h4>
 
 
+## Button Components
+
+
+### Color Variation
+
+<p class="btn"><a href="">Default</a></p>
+<p class="btn primary"><a href="">Primary</a></p>
+<p class="btn green"><a href="">Success</a></p>
+<p class="btn blue"><a href="">Info</a></p>
+<p class="btn orange"><a href="">Warning</a></p>
+<p class="btn red"><a href="">Danger</a></p>
+
+### button Element
+<p class="btn"><button>Default</button></p>
+<p class="btn primary"><button>Button</button></p>
+<p class="btn green"><button>Success</button></p>
+<p class="btn blue"><button>Info</button></p>
+<p class="btn orange"><button>Warning</button></p>
+<p class="btn red"><button>Danger</button></p>
+
+### input Element
+<p class="btn"><input type="submit" value="Default"/></p>
+<p class="btn primary"><input type="submit" value="Button"/></p>
+<p class="btn green"><input type="submit" value="Success"/></p>
+<p class="btn blue"><input type="submit" value="Info"/></p>
+<p class="btn orange"><input type="submit" value="Warning"/></p>
+<p class="btn red"><input type="submit" value="Danger"/></p>
+
+### Button Variation
+#### active
+<p class="btn active"><input type="submit" value="Default"/></p>
+<p class="btn primary active"><input type="submit" value="Button"/></p>
+<p class="btn green active"><input type="submit" value="Success"/></p>
+<p class="btn blue active"><input type="submit" value="Info"/></p>
+<p class="btn orange active"><input type="submit" value="Warning"/></p>
+<p class="btn red active"><input type="submit" value="Danger"/></p>
+
+#### disable
+<p class="btn disable"><input type="submit" value="Default"/></p>
+<p class="btn primary disable"><input type="submit" value="Button"/></p>
+<p class="btn green disable"><input type="submit" value="Success"/></p>
+<p class="btn blue disable"><input type="submit" value="Info"/></p>
+<p class="btn orange disable"><input type="submit" value="Warning"/></p>
+<p class="btn red disable"><input type="submit" value="Danger"/></p>
+
+
+### Size Variation
+
+<p class="btn primary mini"><a href="">Mini button</a></p>
+<p class="btn primary small"><a href="">Small button</a></p>
+<p class="btn primary"><a href="">Default button</a></p>
+<p class="btn primary large"><a href="">Large button</a></p>
+<p class="btn primary big"><a href="">Big button</a></p>
+
+### Size Variation - width
+
+<p class="btn primary narrow"><a href="">narrow</a></p>
+<p class="btn primary short"><a href="">short</a></p>
+<p class="btn primary"><a href="">Default button</a></p>
+<p class="btn primary long"><a href="">long</a></p>
+<p class="btn primary wide"><a href="">wide</a></p>
+<p class="btn primary free"><a href="">free</a></p>
+
+### Size Variation - height
+
+<p class="btn primary lower"><a href="">lower</a></p>
+<p class="btn primary low"><a href="">low</a></p>
+<p class="btn primary"><a href="">Default button</a></p>
+<p class="btn primary high"><a href="">high</a></p>
+<p class="btn primary lofty"><a href="">lofty</a></p>
+
+
+
 ## Alert
 
 <p class="alert">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
@@ -864,106 +937,151 @@
 
 <br><br>
 
-<footer class="footer center">
-  <div class="wrap">
-    <p class="title footer">Atomic Package</p>
-    <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
-  </div>
-</footer>
-
-<br><br>
-
-<footer class="footer center">
-  <div class="wrap">
-    <ul class="menuList align">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  </div>
-</footer>
-
 <br><br>
 
 <ul class="textList align">
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>texttexttext</li>
+  <li>texttext</li>
+  <li>texttexttexttext</li>
+  <li>texttext</li>
+  <li>texttexttexttexttext</li>
 </ul>
 
+<div class="box textList">
+  <ul class="textList">
+    <li>texttexttext</li>
+    <li>texttext</li>
+    <li>texttexttexttext</li>
+    <li>texttext</li>
+    <li>texttexttexttexttext</li>
+  </ul>
+
+  <ul class="textList">
+    <li>texttexttext</li>
+    <li>texttext</li>
+    <li>texttexttexttext</li>
+    <li>texttext</li>
+    <li>texttexttexttexttext</li>
+  </ul>
+</div>
+
+<p class="text">フッターレイアウト モジュール</p>
+
+
+
 <footer class="footer">
-  <div class="wrap">
-
-    <div class="box menuList">
-      <dl class="menuList">
-        <dt>PRODUCT</dt>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-      </dl>
-
-      <dl class="menuList">
-        <dt>PRODUCT</dt>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-      </dl>
-
-      <dl class="menuList">
-        <dt>PRODUCT</dt>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-      </dl>
-
-      <dl class="menuList">
-        <dt>PRODUCT</dt>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-        <dd>Tour</dd>
-      </dl>
+  <div class="top">
+    <div class="wrap">
+      top
     </div>
+  </div>
+  <div class="main">
+    <div class="wrap">
+      main
+    </div>
+  </div>
+  <div class="bottom">
+    <div class="wrap">
+      bottom
+    </div>
+  </div>
+</footer>
 
+<br><br>
+
+<footer class="footer center">
+  <div class="main">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer">
+  <div class="main center">
+    <div class="wrap">
+      <ul class="menuList align">
+        <li>Features</li>
+        <li>Pricing</li>
+        <li>About</li>
+        <li>Facebook</li>
+        <li>Twitter</li>
+      </ul>
+    </div>
+  </div>
+  <div class="bottom gray center">
+    <div class="wrap">
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+
+<br><br>
+
+<footer class="footer">
+  <div class="main flex">
+    <div class="wrap">
+      <div class="box menuList">
+        <dl class="menuList">
+          <dt>PRODUCT</dt>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+        </dl>
+
+        <dl class="menuList">
+          <dt>PRODUCT</dt>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+        </dl>
+
+        <dl class="menuList">
+          <dt>PRODUCT</dt>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+        </dl>
+
+        <dl class="menuList">
+          <dt>PRODUCT</dt>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+          <dd>Tour</dd>
+        </dl>
+      </div>
+    </div>
+    <div class="wrap right">
+      <p class="btn"><a href="">Default</a></p>
+    </div>
+  </div>
+  <div class="bottom">
+    <div class="wrap">
+      <h4 class="title">Awesome</h4>
+      <ul class="textList">
+        <li>Privacy</li>
+        <li>
+          TSA
+        </li>
+        <li>
+          <p class="text copy">© 2016  APBCSS</p>
+        </li>
+      </ul>
+    </div>
   </div>
 </footer>
 
 <br><br>
 
 
-<footer class="footer center">
-  <div class="wrap">
-    <p class="title footer">Atomic Package</p>
-    <p class="text copy">&copy; Atomic Package</p>
-  </div>
-</footer>
 
-<footer class="footer center">
-  <div class="wrap">
-    <p class="title footer">Atomic Package</p>
-    <p class="text copy">&copy; Atomic Package</p>
-  </div>
-</footer>
-
-<footer class="footer center">
-  <div class="wrap">
-    <p class="title footer">Atomic Package</p>
-    <p class="text copy">&copy; Atomic Package</p>
-  </div>
-</footer>
-
-<footer class="footer center">
-  <div class="wrap">
-    <p class="title footer">Atomic Package</p>
-    <p class="text copy">&copy; Atomic Package</p>
-  </div>
-</footer>
 </body>
 </html>
