refactor footer style & add helper style

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -939,6 +939,14 @@
 
 <br><br>
 
+<ul class="textList">
+  <li>texttexttext</li>
+  <li>texttext</li>
+  <li>texttexttexttext</li>
+  <li>texttext</li>
+  <li>texttexttexttexttext</li>
+</ul>
+
 <ul class="textList align">
   <li>texttexttext</li>
   <li>texttext</li>
@@ -1029,50 +1037,53 @@
         <dl class="menuList">
           <dt>PRODUCT</dt>
           <dd>Tour</dd>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
+          <dd>Features</dd>
+          <dd>Pricing</dd>
+          <dd>Terms</dd>
         </dl>
 
         <dl class="menuList">
-          <dt>PRODUCT</dt>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
+          <dt>CUSTOMERS</dt>
+          <dd>Sign in</dd>
+          <dd>Support</dd>
+          <dd>FAQs</dd>
+          <dd>Testimonials</dd>
         </dl>
 
         <dl class="menuList">
-          <dt>PRODUCT</dt>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
+          <dt>ABOUT US</dt>
+          <dd>Our Story</dd>
+          <dd>Offices</dd>
+          <dd>Press</dd>
         </dl>
 
         <dl class="menuList">
-          <dt>PRODUCT</dt>
+          <dt>FOLLOW US</dt>
+          <dd>Facebook</dd>
+          <dd>Twitter</dd>
           <dd>Tour</dd>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
-          <dd>Tour</dd>
+          <dd>Pinterest</dd>
         </dl>
       </div>
     </div>
     <div class="wrap right">
-      <p class="btn"><a href="">Default</a></p>
+      <p class="btn large"><a href="">Default</a></p>
     </div>
   </div>
   <div class="bottom">
-    <div class="wrap">
+    <div class="wrap flex">
       <h4 class="title">Awesome</h4>
-      <ul class="textList">
-        <li>Privacy</li>
+      <ul class="textList align ml-40">
         <li>
-          TSA
+          <a href="">Privacy</a>
         </li>
+        <li>・</li>
         <li>
-          <p class="text copy">© 2016  APBCSS</p>
+          <a href="">TSA</a>
+        </li>
+        <li>・</li>
+        <li>
+          <p class="copyright">© 2016  APBCSS</p>
         </li>
       </ul>
     </div>
