refactor alert style

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1036,10 +1036,18 @@
       <div class="box menuList">
         <dl class="menuList">
           <dt>PRODUCT</dt>
-          <dd>Tour</dd>
-          <dd>Features</dd>
-          <dd>Pricing</dd>
-          <dd>Terms</dd>
+          <dd>
+            <a href="">Tour</a>
+          </dd>
+          <dd>
+            <a href="">Features</a>
+          </dd>
+          <dd>
+            <a href="">Pricing</a>
+          </dd>
+          <dd>
+            <a href="">Terms</a>
+          </dd>
         </dl>
 
         <dl class="menuList">
