add size variation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1052,25 +1052,51 @@
 
         <dl class="menuList">
           <dt>CUSTOMERS</dt>
-          <dd>Sign in</dd>
-          <dd>Support</dd>
-          <dd>FAQs</dd>
-          <dd>Testimonials</dd>
+          <dd>
+            <a href="">Sign in</a>
+          </dd>
+          <dd>
+            <a href="">Support</a>
+          </dd>
+          <dd>
+            <a href="">FAQs</a>
+          </dd>
+          <dd>
+            <a href="">Testimonials</a>
+          </dd>
         </dl>
 
         <dl class="menuList">
-          <dt>ABOUT US</dt>
-          <dd>Our Story</dd>
-          <dd>Offices</dd>
-          <dd>Press</dd>
+          <dt>
+            <a href="">ABOUT US</a>
+          </dt>
+          <dd>
+            <a href="">Our Story</a>
+          </dd>
+          <dd>
+            <a href="">Offices</a>
+          </dd>
+          <dd>
+            <a href="">Press</a>
+          </dd>
         </dl>
 
         <dl class="menuList">
-          <dt>FOLLOW US</dt>
-          <dd>Facebook</dd>
-          <dd>Twitter</dd>
-          <dd>Tour</dd>
-          <dd>Pinterest</dd>
+          <dt>
+            <a href="">FOLLOW US</a>
+          </dt>
+          <dd>
+            <a href="">Facebook</a>
+          </dd>
+          <dd>
+            <a href="">Twitter</a>
+          </dd>
+          <dd>
+            <a href="">Tour</a>
+          </dd>
+          <dd>
+            <a href="">Pinterest</a>
+          </dd>
         </dl>
       </div>
     </div>
@@ -1091,7 +1117,7 @@
         </li>
         <li>・</li>
         <li>
-          <p class="copyright">© 2016  APBCSS</p>
+          <p class="copyright">© 2017 Atomic Package</p>
         </li>
       </ul>
     </div>
@@ -1100,7 +1126,140 @@
 
 <br><br>
 
+<footer class="footer">
+  <div class="main center">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <ul class="menuList align">
+        <li>Features</li>
+        <li>Pricing</li>
+        <li>About</li>
+        <li>Facebook</li>
+        <li>Twitter</li>
+      </ul>
+    </div>
+  </div>
+  <div class="bottom">
+    <div class="wrap">
+      <p class="copyright center">© 2017 Atomic Package</p>
+    </div>
+  </div>
+</footer>
 
+<br><br>
 
+<p class="text">サイズバリエーション</p>
+
+<footer class="footer mini center">
+  <div class="main">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer small center">
+  <div class="main">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer center">
+  <div class="main">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer large center">
+  <div class="main">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer big center">
+  <div class="main">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<p class="text">レイアウト サイズバリエーション</p>
+
+<footer class="footer center">
+  <div class="main mini">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer center">
+  <div class="main small">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer center">
+  <div class="main">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer center">
+  <div class="main large">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer center">
+  <div class="main big">
+    <div class="wrap">
+      <p class="title footer">Atomic Package</p>
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
 </body>
 </html>
