add color variation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1316,5 +1316,59 @@
     </div>
   </div>
 </footer>
+
+
+<p class="text">Color Variation</p>
+
+<footer class="footer primary mini center">
+  <div class="main">
+    <div class="wrap">
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer green mini center">
+  <div class="main">
+    <div class="wrap">
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer blue mini center">
+  <div class="main">
+    <div class="wrap">
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer orange mini center">
+  <div class="main">
+    <div class="wrap">
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
+<footer class="footer red mini center">
+  <div class="main">
+    <div class="wrap">
+      <p class="subTitle footer">APBCSS UI Kit for everyone to share and enjoy.</p>
+    </div>
+  </div>
+</footer>
+
+<br><br>
+
 </body>
 </html>
