--- a/src/html/index.html
+++ b/src/html/index.html
@@ -72,6 +72,8 @@
 
 ### Color Variation
 
+<br><br>
+
 <p class="btn"><a href="">Default</a></p>
 <p class="btn primary"><a href="">Primary</a></p>
 <p class="btn green"><a href="">Success</a></p>
@@ -79,7 +81,11 @@
 <p class="btn orange"><a href="">Warning</a></p>
 <p class="btn red"><a href="">Danger</a></p>
 
+<br><br>
 ### button Element
+
+<br><br>
+
 <p class="btn"><button>Default</button></p>
 <p class="btn primary"><button>Button</button></p>
 <p class="btn green"><button>Success</button></p>
@@ -87,7 +93,12 @@
 <p class="btn orange"><button>Warning</button></p>
 <p class="btn red"><button>Danger</button></p>
 
+<br><br>
+
 ### input Element
+
+<br><br>
+
 <p class="btn"><input type="submit" value="Default"/></p>
 <p class="btn primary"><input type="submit" value="Button"/></p>
 <p class="btn green"><input type="submit" value="Success"/></p>
@@ -95,8 +106,13 @@
 <p class="btn orange"><input type="submit" value="Warning"/></p>
 <p class="btn red"><input type="submit" value="Danger"/></p>
 
+<br><br>
+
 ### Button Variation
 #### active
+
+<br><br>
+
 <p class="btn active"><input type="submit" value="Default"/></p>
 <p class="btn primary active"><input type="submit" value="Button"/></p>
 <p class="btn green active"><input type="submit" value="Success"/></p>
@@ -104,7 +120,12 @@
 <p class="btn orange active"><input type="submit" value="Warning"/></p>
 <p class="btn red active"><input type="submit" value="Danger"/></p>
 
+<br><br>
+
 #### disable
+
+<br><br>
+
 <p class="btn disable"><input type="submit" value="Default"/></p>
 <p class="btn primary disable"><input type="submit" value="Button"/></p>
 <p class="btn green disable"><input type="submit" value="Success"/></p>
@@ -112,8 +133,11 @@
 <p class="btn orange disable"><input type="submit" value="Warning"/></p>
 <p class="btn red disable"><input type="submit" value="Danger"/></p>
 
+<br><br>
 
 ### Size Variation
+
+<br><br>
 
 <p class="btn primary mini"><a href="">Mini button</a></p>
 <p class="btn primary small"><a href="">Small button</a></p>
@@ -121,16 +145,27 @@
 <p class="btn primary large"><a href="">Large button</a></p>
 <p class="btn primary big"><a href="">Big button</a></p>
 
+<br><br>
+
 ### Size Variation - width
+
+<br><br>
 
 <p class="btn primary narrow"><a href="">narrow</a></p>
 <p class="btn primary short"><a href="">short</a></p>
 <p class="btn primary"><a href="">Default button</a></p>
 <p class="btn primary long"><a href="">long</a></p>
 <p class="btn primary wide"><a href="">wide</a></p>
+
+<br><br>
+
 <p class="btn primary free"><a href="">free</a></p>
 
+<br><br>
+
 ### Size Variation - height
+
+<br><br>
 
 <p class="btn primary lower"><a href="">lower</a></p>
 <p class="btn primary low"><a href="">low</a></p>
@@ -138,13 +173,13 @@
 <p class="btn primary high"><a href="">high</a></p>
 <p class="btn primary lofty"><a href="">lofty</a></p>
 
-
+<br><br>
 
 ## Alert
 
 <p class="alert">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 <p class="alert green">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
-<p class="alert yellow">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+<p class="alert orange">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 <p class="alert red">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 
 
@@ -156,7 +191,7 @@
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 </div>
 
-<div class="alert yellow">
+<div class="alert orange">
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 </div>
 
@@ -169,22 +204,22 @@
 
 <div class="alert">
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
-  <p class="btn close"></p>
+  <p class="btn close blue"></p>
 </div>
 
 <div class="alert green">
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
-  <p class="btn close"></p>
+  <p class="btn close green"></p>
 </div>
 
-<div class="alert yellow">
+<div class="alert orange">
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
-  <p class="btn close"></p>
+  <p class="btn close orange"></p>
 </div>
 
 <div class="alert red">
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
-  <p class="btn close"></p>
+  <p class="btn close red"></p>
 </div>
 
 
