--- a/src/html/index.html
+++ b/src/html/index.html
@@ -204,26 +204,29 @@
 
 <div class="alert">
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
-  <p class="btn close blue"></p>
+  <p class="btn close blue small"></p>
 </div>
 
 <div class="alert green">
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
-  <p class="btn close green"></p>
+  <p class="btn close green small"></p>
 </div>
 
 <div class="alert orange">
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
-  <p class="btn close orange"></p>
+  <p class="btn close orange small"></p>
 </div>
 
 <div class="alert red">
   <p class="text">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
-  <p class="btn close red"></p>
+  <p class="btn close red small"></p>
 </div>
 
-
-
+<p class="btn close red mini"></p>
+<p class="btn close red small"></p>
+<p class="btn close red"></p>
+<p class="btn close red large"></p>
+<p class="btn close red big"></p>
 
 
 
